[ci skip] Update with 2dff149

--- a/book/ch01.html
+++ b/book/ch01.html
@@ -55,12 +55,12 @@
 </ul>
 
 <h3><a id="h1-1-1"></a>要件定義をする理由</h3>
-<p>最初に要件定義をすることで「これも入れたい」といった思いつきのアイデアに影響されず、作業が巻き戻ることを最小限に抑えられます。これにより、サイトをよりいいものにする作業へ時間を割く事ができます。</p>
+<p>最初に要件定義をすることで「これも入れたい」といった思いつきのアイデアに影響されず、作業が巻き戻ることを最小限に抑えられます。これにより、サイトをよりいいものにする作業へ時間を割くことができます。</p>
 
 <h3><a id="h1-1-2"></a>ラブライブ！参加者募集サイトの要件定義</h3>
 <p>では実際に要件定義をしていきます。まずどんなサイトを作るかというところから始めます。今回は「ラブライブ！」というアイドルコンテストの参加者募集サイトを作ります。</p>
 <p>手順としてはまずターゲットユーザーを定義します。そしてターゲットユーザーにどんな体験を与えたいのか考えます。今回は主に見てもらいたいユーザーとして、スクールアイドルが挙げられます。この参加者募集サイトを見た後にスクールアイドルが応募してくれるような体験を作ることが大事です。</p>
-<p>次に機能です。今回は工数やスケジュールを考えた結果、トップページとライブ中継ページの2ページのみ作ることにしました。このように期限と開発期間から現実的な範囲で判断する事も要件定義の一部となります。</p>
+<p>次に機能です。今回は工数やスケジュールを考えた結果、トップページとライブ中継ページの2ページのみ作ることにしました。このように期限と開発期間から現実的な範囲で判断することも要件定義の一部となります。</p>
 
 <h2><a id="h1-2"></a><span class="secno">1.2　</span>要素を整理する</h2>
 <p>サイト内のボタンや画像、テキストなどさまざまな表示、動作する情報を「要素」と呼びます。どの要素をどの位置へ置くかは、設計者が最も合理的だと考えた場所になります。そのため要素を置く場所が合理的なのか判断するため、ターゲットユーザーの分析が必要となります。ユーザーが「最も合理的」と感じる方向に向かって、さまざまなことを考え設計するべきです。たとえば以下のことが考えられます。</p>
@@ -103,7 +103,7 @@
 <li>投票</li>
 <li>広告スペース</li>
 </ul>
-<p>ここで最初に書いた要件定義を思い出しましょう。今回は「工数やスケジュールを考えた結果、トップページとライブ中継ページの2ページのみ作る」ということでした。つまり他のページについて要素整理は必要なく、ここで終わらせることができます。今回、どこまで資料が必要なのかは要件定義の段階で明確にしていました。そのため余計な作業はなくなり、効率的に開発を進める事ができます。</p>
+<p>ここで最初に書いた要件定義を思い出しましょう。今回は「工数やスケジュールを考えた結果、トップページとライブ中継ページの2ページのみ作る」ということでした。つまり他のページについて要素整理は必要なく、ここで終わらせることができます。今回、どこまで資料が必要なのかは要件定義の段階で明確にしていました。そのため余計な作業はなくなり、効率的に開発を進めることができます。</p>
 <p>ここからは今回のサイトについて推測を書いていきます。よければ参考にしてください。</p>
 
 <h4><a id="h1-2-1-3"></a>OUTLINE</h4>
@@ -147,9 +147,9 @@
 <p>ワイヤーフレームはサイト内にある要素の種類・数・位置を示すものです。仕様書は要素の具体的な表示方法や演出をどうするか明記するものです。場合によっては、ワイヤーフレームと仕様書両方をまとめたり分けて書きます。</p>
 <p>サイトの内容が豊かであればあるほど仕様書も内容は多くなります。その時は分けて書くことをおすすめします。また1ページごとにワイヤーフレームと仕様書は必要です。</p>
 <p>ワイヤーフレームはPowerPointとExcelのどちらか好きなほうを使います。仕様書はExcelをおすすめします。ワイヤーフレームや仕様書は作る際に3つ気をつけたいことがあります。それらを、ひとつずつ解説していきます。</p>
-<p>はじめに気をつける事として、要素は色もしくは形で分けるように書くことです。ワイヤーフレームの要素は大きく分けて画像・テキスト・ボタンの3種類に分けられます。さらに動作の要素を入れると、スクロールやポップアップなどがあります。これらを見分けがつくように分けて書くことをおすすめします。</p>
-<p>次に気をつける事として、ワイヤーフレームに余計な情報を入れないということです。ワイヤーフレームはあくまで要素がページ内のどこにあるか示す資料です。そのため色など不要な情報はなるべく入れないほうがいいです。なぜならデザイナーはグラフィックとUIの制作に、参考資料としてワイヤーフレームを使うためです。余計な情報があると資料は分かりづらくなり混乱を招きます。グラフィックやUIの方向性を決めるのはアートディレクターの仕事なので、企画資料としては見やすいようにすることが最優先です。</p>
-<p>最後に気をつける事として、仕様書は箇条書きにすることです。それぞれの要素や動作に対して、箇条書きする必要があります。仕様書を見るエンジニアにとって不明な点がない状態でコーディングできるよう目指します。</p>
+<p>はじめに気をつけることとして、要素は色もしくは形で分けるように書くことです。ワイヤーフレームの要素は大きく分けて画像・テキスト・ボタンの3種類に分けられます。さらに動作の要素を入れると、スクロールやポップアップなどがあります。これらを見分けがつくように分けて書くことをおすすめします。</p>
+<p>次に気をつけることとして、ワイヤーフレームに余計な情報を入れないということです。ワイヤーフレームはあくまで要素がページ内のどこにあるか示す資料です。そのため色など不要な情報はなるべく入れないほうがいいです。なぜならデザイナーはグラフィックとUIの制作に、参考資料としてワイヤーフレームを使うためです。余計な情報があると資料は分かりづらくなり混乱を招きます。グラフィックやUIの方向性を決めるのはアートディレクターの仕事なので、企画資料としては見やすいようにすることが最優先です。</p>
+<p>最後に気をつけることとして、仕様書は箇条書きにすることです。それぞれの要素や動作に対して、箇条書きする必要があります。仕様書を見るエンジニアにとって不明な点がない状態でコーディングできるよう目指します。</p>
 
 <h2><a id="h1-5"></a><span class="secno">1.5　</span>今回のワイヤーフレームと仕様書について</h2>
 <p>要件定義の段階で判明していましたが今回はページ数と要素の両方とも少ないです。そのためワイヤーフレームと仕様書をまとめて書きました。1ページずつ見ていきましょう。</p>
@@ -222,7 +222,7 @@
 <h3><a id="h1-6-1"></a>ライセンス</h3>
 <p>はじめにソースコードのライセンスです。GitHub上にあるライブラリはだいたいライセンス情報を書いたファイルが置かれています。ライセンスファイルが置かれていないライブラリは使わないようにします。理由は今後どんなライセンスが適用されるか分からないという理由と、作者が再利用されたくないという意志の元、ライセンスファイルを置いていない可能性があるためです。</p>
 <p>なおライセンスファイルが置いてある場合でもGPLライセンスの場合は注意します。理由はライブラリに独自の改変を加えた際、GPLライセンスでソースコード公開が必要なためです。MITライセンスや修正BSDライセンスについては、作者の名前を書いておけば問題ありません。</p>
-<p>「サイト制作のSTART:DASH!!」ではソースコード部分をMITライセンスで提供しています。そのためこの本に出てくるソースコードはMITライセンスである旨と<tt>Copyright (c) 2015 O2 Project</tt>という著作権を表示すれば自由に使う事ができます。ただしMITライセンスの特性上、ソースコードを使った事による責任は負いません。</p>
+<p>「サイト制作のSTART:DASH!!」ではソースコード部分をMITライセンスで提供しています。そのためこの本に出てくるソースコードはMITライセンスである旨と<tt>Copyright (c) 2015 O2 Project</tt>という著作権を表示すれば自由に使うことができます。ただしMITライセンスの特性上、ソースコードを使ったことによる責任は負いません。</p>
 
 <h3><a id="h1-6-2"></a>著作権</h3>
 <p>またサイト上で使う画像についても注意が必要です。<a href="http://law.e-gov.go.jp/htmldata/S45/S45HO048.html#1000000000002000000003000000005000000000000000000000000000000000000000000000000" class="link">著作権法 第三十条</a>には、次のような記述があります。</p>
@@ -232,7 +232,7 @@
 <p>またイラストをトレースし自分流に編集して公開する場合も問題となる場合があります。このあたりは次の記事を見るといいでしょう。</p>
 <blockquote><p><a href="http://www.bengo4.com/houmu/17/1263/n_3282/" class="link">大人気ゲーム「刀剣乱舞」に「トレパク」疑惑が続々浮上——どんな問題があるのか？|弁護士ドットコムニュース</a></p>
 <p></p></blockquote>
-<p>なおこの「サイト制作のSTART:DASH!!」は文章部分をクリエイティブ・コモンズの表示・非営利・継承4.0国際ライセンスで提供しています。このライセンスは次の3つを満たすことにより文章部分を自由に使う事ができます。</p>
+<p>なおこの「サイト制作のSTART:DASH!!」は文章部分をクリエイティブ・コモンズの表示・非営利・継承4.0国際ライセンスで提供しています。このライセンスは次の3つを満たすことにより文章部分を自由に使うことができます。</p>
 <ul>
 <li>著作権を表示する</li>
 <li>非営利である</li>
