--- a/book/ch02.html
+++ b/book/ch02.html
@@ -48,7 +48,7 @@
 <p>これらについて、ひとつずつ説明していきます。</p>
 
 <h3><a id="h2-1-1"></a>エディターもしくはIDE</h3>
-<p>はじめに、ソースコードを書くためのエディターもしくはIDE（統合開発環境）を用意します。エディターとIDEですが、エディターはIDEと比べて自分で設定できる部分が多いです。そのため拡張性はエディターのほうが高いです。その分エディターの設定に時間がかかってしまう事もあります。IDEはインストールした時からある程度の設定がされています。その代わりエディターと比べて拡張性は低いです。</p>
+<p>はじめに、ソースコードを書くためのエディターもしくはIDE（統合開発環境）を用意します。エディターとIDEですが、エディターはIDEと比べて自分で設定できる部分が多いです。そのため拡張性はエディターのほうが高いです。その分エディターの設定に時間がかかってしまうこともあります。IDEはインストールした時からある程度の設定がされています。その代わりエディターと比べて拡張性は低いです。</p>
 <p>なのでより自分好みの設定にしたい場合はエディターを、設定をいろいろいじるのが面倒な場合はIDEを使うといいです。</p>
 <p>エディターはWindowsとOS X共にAtomやSublime Textがよく使われています。IDEはWebStormやNetBeans、Visual Studio Community Editionがよく使われています。</p>
 
@@ -84,7 +84,7 @@
 <p>しかし、初期状態では期間設定の使い勝手があまりよくありません。具体的には期間設定が<tt>1ヶ月</tt>の後は<tt>1年</tt>となってしまうため<tt>3ヶ月以内</tt>などは指定できません。これに関しては<a href="https://chrome.google.com/webstore/detail/add-search-options/kaifgnoibnjldmdkkfogenbfbfgcbiao?hl=ja" class="link">Add Search Options</a>というGoogle Chrome拡張機能を使います。この拡張機能を使うことにより、期間指定に<tt>3ヶ月以内</tt>と<tt>6ヶ月以内</tt>が増えます。</p>
 
 <h3><a id="h2-2-2"></a>周りの人に聞く</h3>
-<p>検索をしてもいい情報に巡りあえない事があります。その場合、周りに聞ければ聞いたほうがいいです。</p>
+<p>検索をしてもいい情報に巡りあえないことがあります。その場合、周りに聞ければ聞いたほうがいいです。</p>
 <p>聞く前にまずは検索したり問題の概要をまとめます。これにより聞く側にとらせる時間が少なくなります。聞き方としてはおそらく解答にかかるであろう時間を予測して、「『○○』について聞きたいのですが、×分ほど時間はありますか」と聞くのがいいです。この「○○」に入る言葉は、たとえば「ある機能の実装方法」ということが入ると思います。</p>
 <p>また聞く相手を間違えないようにします。たとえばプログラムのことをエンジニア以外に聞いても、ほとんどの場合は求める回答が返ってこないと思います。</p>
 
@@ -130,7 +130,7 @@
 <h2><a id="h2-5"></a><span class="secno">2.5　</span>ライブラリの選定JavaScript編</h2>
 <p>次にJavaScriptのライブラリを選定していきます。今回JavaScript側で実装する機能として、カルーセルがあります。</p>
 <p>カルーセルは<a href="http://www.nike.com/jp/ja_jp/" class="link">Nike</a> などで使われている「注目させたい複数の画像などをつぎつぎと横にスライド表示する」ものです。このカルーセルを実現するためのライブラリは<a href="http://kenwheeler.github.io/slick/" class="link">slick</a>にします。slickを使うために<a href="http://jquery.com/" class="link">jQuery</a>も使います。</p>
-<p>選定した理由は2つあります。ひとつめとして、ドキュメントがそろっておりカルーセルを実装する時に困らないためです。これによりやりたい事がすぐ実現できます。ふたつめとして、slickは開発が活発な事です。ただ互換性がない更新も起こるので最新版に更新する際は注意が必要です。</p>
+<p>選定した理由は2つあります。ひとつめとして、ドキュメントがそろっておりカルーセルを実装する時に困らないためです。これによりやりたいことがすぐ実現できます。ふたつめとして、slickは開発が活発なことです。ただ互換性がない更新も起こるので最新版に更新する際は注意が必要です。</p>
 <p>なお、カルーセルでの表示に無限ループがいらなければ<a href="http://hokaccha.github.io/js-flipsnap/" class="link">flipsnap.js</a>もおすすめです。jQueryに依存するライブラリでは他に<a href="http://owlgraphic.com/owlcarousel/" class="link">Owl Carousel</a>がよく使われます。</p>
 <p>これでライブラリの選定が終わりました。次章からはサイトの実装をしていきます。</p>
 
