--- a/book/ch05.html
+++ b/book/ch05.html
@@ -177,7 +177,7 @@
 
 <h2><a id="h5-5"></a><span class="secno">5.5　</span>ライブステージページ全体の見た目を整える</h2>
 <p>はじめにライブステージページ全体へ関わるスタイルを適用します。</p>
-<p>ライブステージページの<tt>main</tt>要素に対し、要素の内側の余白を指定する<tt>padding</tt>や背景色を指定する<tt>background-color</tt>を指定する事でライブステージページの見た目に近づけていきます。さらに見出しにもスタイルを適用する事でサイトの見た目をアニメ版に近づけていきます。</p>
+<p>ライブステージページの<tt>main</tt>要素に対し、要素の内側の余白を指定する<tt>padding</tt>や背景色を指定する<tt>background-color</tt>を指定することでライブステージページの見た目に近づけていきます。さらに見出しにもスタイルを適用することでサイトの見た目をアニメ版に近づけていきます。</p>
 <div class="emlist-code">
 <pre class="emlist">/* ライブステージページ：コンテンツ */
 #ll-livestage-page main {
@@ -195,7 +195,7 @@
 </div>
 
 <h2><a id="h5-6"></a><span class="secno">5.6　</span>アーティスト名と曲名部分の見た目を整える</h2>
-<p>アーティスト名と曲名部分にスタイルを適用していきます。アーティスト名部分は背景が白で上下に黄色い線が引かれているという見た目です。こちらは背景色として白色を示す<tt>#fff</tt>を指定します。黄色い線に関しては上下に<tt>border</tt>プロパティでスタイルを定義する事により再現可能です。</p>
+<p>アーティスト名と曲名部分にスタイルを適用していきます。アーティスト名部分は背景が白で上下に黄色い線が引かれているという見た目です。こちらは背景色として白色を示す<tt>#fff</tt>を指定します。黄色い線に関しては上下に<tt>border</tt>プロパティでスタイルを定義することにより再現可能です。</p>
 <p>曲名の左右にある括弧は、特にHTML内へ書いておく必要がないため<tt>::before</tt>と<tt>::after</tt>という擬似要素を使ってCSS側で追加します。</p>
 <div class="emlist-code">
 <pre class="emlist">/* ライブステージページ：アーティスト名 */
@@ -219,7 +219,7 @@
 
 <h2><a id="h5-7"></a><span class="secno">5.7　</span>動画部分の見た目を整える</h2>
 <p>動画部分にスタイルを適用していきます。YouTubeの動画をページ内へ埋め込んでいますが、初期状態だとウィンドウ幅を狭めた場合に動画が収まりきらない状態で表示されてしまいます。そのためCSSで動画をウィンドウ幅内へ収まるように調整します。</p>
-<p>ライブステージページへYouTubeの動画を埋め込んだ時に動画を<tt>div</tt>要素で囲みました。その<tt>div</tt>要素に指定している<tt>ll-live-video</tt>というクラスにCSSでアスペクト比を設定します。動画部分の<tt>iframe</tt>要素に対し絶対配置にする<tt>position: absolute;</tt>を指定した上で幅と高さを100％にする事により、動画が収まって表示されます。</p>
+<p>ライブステージページへYouTubeの動画を埋め込んだ時に動画を<tt>div</tt>要素で囲みました。その<tt>div</tt>要素に指定している<tt>ll-live-video</tt>というクラスにCSSでアスペクト比を設定します。動画部分の<tt>iframe</tt>要素に対し絶対配置にする<tt>position: absolute;</tt>を指定した上で幅と高さを100％にすることにより、動画が収まって表示されます。</p>
 <div class="emlist-code">
 <pre class="emlist">/* ライブステージページ：動画部分をレスポンシブにする */
 .ll-live-video {
