--- a/book/ch04.html
+++ b/book/ch04.html
@@ -45,7 +45,7 @@
 
 <h2><a id="h4-1"></a><span class="secno">4.1　</span>カルーセル部分のマークアップ</h2>
 <p>カルーセル部分のマークアップをしていきます。あらためてカルーセルの説明をすると、<a href="http://www.nike.com/jp/ja_jp/" class="link">Nike</a>などで使われている「注目させたい複数の画像などをつぎつぎと横にスライド表示する」ものです。</p>
-<p>今回カルーセルの実装に<a href="http://kenwheeler.github.io/slick/" class="link">slick</a>というライブラリを使います。slick用として次のHTMLを用意します。とはいっても切り替え表示させる画像を<tt>js-slides ll-slides</tt>というクラスを付けた<tt>div</tt>要素で囲むだけです。接頭辞に<tt>js-</tt>と付けているクラスはJavaScriptから触る事を明確にするため付けています。</p>
+<p>今回カルーセルの実装に<a href="http://kenwheeler.github.io/slick/" class="link">slick</a>というライブラリを使います。slick用として次のHTMLを用意します。とはいっても切り替え表示させる画像を<tt>js-slides ll-slides</tt>というクラスを付けた<tt>div</tt>要素で囲むだけです。接頭辞に<tt>js-</tt>と付けているクラスはJavaScriptから触ることを明確にするため付けています。</p>
 <div class="emlist-code">
 <pre class="emlist">&lt;div class=&quot;js-slides ll-slides&quot;&gt;
   &lt;img src=&quot;images/image_01.jpg&quot; alt=&quot;ラブライブ！ 2nd グランプリ μ's&quot;&gt;
@@ -220,10 +220,10 @@
 <p>処理の流れを洗い出したところで、上から順に説明します。</p>
 
 <h2><a id="h4-6"></a><span class="secno">4.6　</span>他のJavaScriptと競合しないようにする</h2>
-<p>はじめに定義した変数や関数が他のJavaScriptと競合しないようにするため、JavaScriptのソースコード全体を無名関数で囲みます。JavaScriptは宣言した変数や関数の有効範囲（スコープ）が関数単位で閉じられるため無名関数を使います。無名関数は<tt>function() {}</tt>と書きます。ここから無名関数の全体を<tt>()</tt>で囲み最後に<tt>()</tt>を付ける事でJavaScriptを即時実行します。つまり<tt>(function() {})();</tt>となります。こうする事により無名関数内で宣言した変数や関数が他のJavaScriptへ干渉する事を防げます。このように無名関数で全体を囲み即時に実行する関数の事を即時関数と呼びます。</p>
+<p>はじめに定義した変数や関数が他のJavaScriptと競合しないようにするため、JavaScriptのソースコード全体を無名関数で囲みます。JavaScriptは宣言した変数や関数の有効範囲（スコープ）が関数単位で閉じられるため無名関数を使います。無名関数は<tt>function() {}</tt>と書きます。ここから無名関数の全体を<tt>()</tt>で囲み最後に<tt>()</tt>を付けることでJavaScriptを即時実行します。つまり<tt>(function() {})();</tt>となります。こうすることにより無名関数内で宣言した変数や関数が他のJavaScriptへ干渉することを防げます。このように無名関数で全体を囲み即時に実行する関数のことを即時関数と呼びます。</p>
 <p>jQueryを使う場合は<tt>(function() { ... })();</tt>の前に<tt>$</tt>を書いて最後の<tt>()</tt>を削除します。つまり<tt>$(function() { ... });</tt>となります。<tt>$</tt>を書く理由はブラウザーがHTMLを読み込んで解釈した後にJavaScriptを実行させるためです。HTMLを解釈した後にJavaScriptの実行をしない場合、JavaScript内でHTMLの要素を取得できない可能性があります。また最後の<tt>()</tt>を削除した理由は、<tt>$</tt>というのはjQueryの関数だからです。<tt>$</tt>関数の引数として関数を指定するため、最後の<tt>()</tt>がいらなくなります。</p>
 <p>続いて<tt>$(function() { ... });</tt>の中には<tt>&quot;use strict&quot;;</tt>という文字列を書いています。これはJavaScriptをコーディングする上でミスしやすい部分をエラーとして検出してくれるものです。将来に備えていくつかの単語を自由に使えなくする（たとえば<tt>let</tt>や<tt>yield</tt>など）効果があるため、<tt>&quot;use strict&quot;;</tt>は書いても損はありません。</p>
-<p>ここまでをまとめると次のソースコードになります。上に書いた事はなかなか覚えづらいので、JavaScriptを書く時にjQueryを使う場合は図のようにすると覚えておけば大丈夫です。</p>
+<p>ここまでをまとめると次のソースコードになります。上に書いたことはなかなか覚えづらいので、JavaScriptを書く時にjQueryを使う場合は図のようにすると覚えておけば大丈夫です。</p>
 <div class="emlist-code">
 <pre class="emlist">$(function() {
   &quot;use strict&quot;;
