[ci skip] Update with 6a1e7a5

--- a/book/ch01.html
+++ b/book/ch01.html
@@ -44,7 +44,7 @@
 <li>どんなサイトを作るか</li>
 <li>どんな機能が必要か</li>
 </ul>
-<p>要件定義する時は次のように自問自答をすると、どんなサイトを作りどの機能が必要か導けます。</p>
+<p>要件定義するときは次のように自問自答をすると、どんなサイトを作りどの機能が必要か導けます。</p>
 <ul>
 <li>質問：どんなサイトを作る？</li>
 <li>回答：「ラブライブ！」というイベントの情報を発信するサイトを作りたい</li>
@@ -90,7 +90,7 @@
 <p>ひとつずつ見ていきましょう。</p>
 
 <h4><a id="h1-2-1-1"></a>TOP</h4>
-<p>字面どおりサイトのトップページを意味します。ユーザーがサイトを見ている時、どのページにいたとしても1クリックでトップページへ戻れます。サイトを見る時の習慣に準じて一番見やすい左上へ置いたのは、ターゲットユーザーにとって一番大事、一番クリックしてほしいという理由があります。</p>
+<p>字面どおりサイトのトップページを意味します。ユーザーがサイトを見ているとき、どのページにいたとしても1クリックでトップページへ戻れます。サイトを見るときの習慣に準じて一番見やすい左上へ置いたのは、ターゲットユーザーにとって一番大事、一番クリックしてほしいという理由があります。</p>
 
 <h4><a id="h1-2-1-2"></a>LIVE STAGE</h4>
 <p>ラブライブ！の状況をネットで生中継するページだと思われます。参加するアイドルグループが見る、OUTLINEやSCHEDULEより左に位置しています。これは一体どういうことでしょうか？これは参加するアイドルグループの他に、ライブをネット上で見るファンも大事という考えがあると思います。ライブステージページ内にある要素をアニメのキャプチャ画像から推測してみると、以下の要素で構成されているように見えます。</p>
@@ -130,7 +130,7 @@
 
 <h2><a id="h1-3"></a><span class="secno">1.3　</span>サイトマップを作る</h2>
 <p>サイトのページ数と階層を表示する図がサイトマップです。サイトマップは、サイトが何ページあるかということや、ページの関連性をひと目で見られます。それにより工数も推測できます。サイトマップを用意するとメリットがふたつあります。ひとつめに、ページ数が多いサイトの場合は制作スピードを上げられます。ふたつめに、ページ漏れのリスクも減らすことができます。</p>
-<p>サイトマップを書く時、個人的に推奨するツールはExcelです。画像を作るイメージからPowerPointがいいと思う方もいるかもしれません。しかし実はセル結合や枠線を描画して作るほうが楽です。Excelがない場合はGoogle Driveのスプレッドシートも最低限な機能がそろっているので代用できます。作るときの心がけとして、階層を意識し外部リンクは明確に表示するよう作成するのをおすすめします。</p>
+<p>サイトマップを書くとき、個人的に推奨するツールはExcelです。画像を作るイメージからPowerPointがいいと思う方もいるかもしれません。しかし実はセル結合や枠線を描画して作るほうが楽です。Excelがない場合はGoogle Driveのスプレッドシートも最低限な機能がそろっているので代用できます。作るときの心がけとして、階層を意識し外部リンクは明確に表示するよう作成するのをおすすめします。</p>
 
 <h3><a id="h1-3-1"></a>今回のサイトマップについて</h3>
 <p>要件整理をきちんとまとめれば、サイトマップはほぼ考えずに作れると思います。今回作るのはトップとライブステージページの2ページです。またライブステージページ内にポップアップ画面を設計しました。</p>
@@ -145,7 +145,7 @@
 
 <h2><a id="h1-4"></a><span class="secno">1.4　</span>ワイヤーフレームと仕様書の作成</h2>
 <p>ワイヤーフレームはサイト内にある要素の種類・数・位置を示すものです。仕様書は要素の具体的な表示方法や演出をどうするか明記するものです。場合によっては、ワイヤーフレームと仕様書両方をまとめたり分けて書きます。</p>
-<p>サイトの内容が豊かであればあるほど仕様書も内容は多くなります。その時は分けて書くことをおすすめします。また1ページごとにワイヤーフレームと仕様書は必要です。</p>
+<p>サイトの内容が豊かであればあるほど仕様書も内容は多くなります。そのときは分けて書くことをおすすめします。また1ページごとにワイヤーフレームと仕様書は必要です。</p>
 <p>ワイヤーフレームはPowerPointとExcelのどちらか好きなほうを使います。仕様書はExcelをおすすめします。ワイヤーフレームや仕様書は作る際に3つ気をつけたいことがあります。それらを、ひとつずつ解説していきます。</p>
 <p>はじめに気をつけることとして、要素は色もしくは形で分けるように書くことです。ワイヤーフレームの要素は大きく分けて画像・テキスト・ボタンの3種類に分けられます。さらに動作の要素を入れると、スクロールやポップアップなどがあります。これらを見分けがつくように分けて書くことをおすすめします。</p>
 <p>次に気をつけることとして、ワイヤーフレームに余計な情報を入れないということです。ワイヤーフレームはあくまで要素がページ内のどこにあるか示す資料です。そのため色など不要な情報はなるべく入れないほうがいいです。なぜならデザイナーはグラフィックとUIの制作に、参考資料としてワイヤーフレームを使うためです。余計な情報があると資料は分かりづらくなり混乱を招きます。グラフィックやUIの方向性を決めるのはアートディレクターの仕事なので、企画資料としては見やすいようにすることが最優先です。</p>
@@ -217,7 +217,7 @@
 </div>
 
 <h2><a id="h1-6"></a><span class="secno">1.6　</span>注意する点</h2>
-<p>サイトを作る時いくつか注意点があります。それはライセンスや著作権です。</p>
+<p>サイトを作るときいくつか注意点があります。それはライセンスや著作権です。</p>
 
 <h3><a id="h1-6-1"></a>ライセンス</h3>
 <p>はじめにソースコードのライセンスです。GitHub上にあるライブラリはだいたいライセンス情報を書いたファイルが置かれています。ライセンスファイルが置かれていないライブラリは使わないようにします。理由は今後どんなライセンスが適用されるか分からないという理由と、作者が再利用されたくないという意志の元、ライセンスファイルを置いていない可能性があるためです。</p>
@@ -256,7 +256,7 @@
 </ul>
 </li>
 </ul>
-<p>写真素材サイトを使うことで、高品質な写真が使えます。ただし写真を使う時は各写真素材サイトの注意項目を読んだ上で、それに沿って使う必要があります。</p>
+<p>写真素材サイトを使うことで、高品質な写真が使えます。ただし写真を使うときは各写真素材サイトの注意項目を読んだ上で、それに沿って使う必要があります。</p>
 
 
             <ul class="pager">
