--- a/book/ch02.html
+++ b/book/ch02.html
@@ -48,7 +48,7 @@
 <p>これらについて、ひとつずつ説明していきます。</p>
 
 <h3><a id="h2-1-1"></a>エディターもしくはIDE</h3>
-<p>はじめに、ソースコードを書くためのエディターもしくはIDE（統合開発環境）を用意します。エディターとIDEですが、エディターはIDEと比べて自分で設定できる部分が多いです。そのため拡張性はエディターのほうが高いです。その分エディターの設定に時間がかかってしまうこともあります。IDEはインストールした時からある程度の設定がされています。その代わりエディターと比べて拡張性は低いです。</p>
+<p>はじめに、ソースコードを書くためのエディターもしくはIDE（統合開発環境）を用意します。エディターとIDEですが、エディターはIDEと比べて自分で設定できる部分が多いです。そのため拡張性はエディターのほうが高いです。その分エディターの設定に時間がかかってしまうこともあります。IDEはインストールしたときからある程度の設定がされています。その代わりエディターと比べて拡張性は低いです。</p>
 <p>なのでより自分好みの設定にしたい場合はエディターを、設定をいろいろいじるのが面倒な場合はIDEを使うといいです。</p>
 <p>エディターはWindowsとOS X共にAtomやSublime Textがよく使われています。IDEはWebStormやNetBeans、Visual Studio Community Editionがよく使われています。</p>
 
@@ -68,15 +68,15 @@
 <p>また開発者向けに提供されている開発版をインストールしたほうが、事前に次期バージョンでハマりそうな点が分かるのでおすすめです。</p>
 
 <h3><a id="h2-1-3"></a>GitとGitHub</h3>
-<p>最後に、作業履歴を管理するためGitとGitHubを用意します。たとえば突然PCがブルースクリーンになってしまい、予期しないシャットダウンをしなければいけなくなったとします。その時Gitに作業履歴が残っていれば、かなり前の作業まで遡ってしまうことが少なくなります。GitはSourceTreeをダウンロードして使うのがいいでしょう。もしGitについてあまり知らない場合は、拙著のSteins;Gitを読んでみてください。</p>
+<p>最後に、作業履歴を管理するためGitとGitHubを用意します。たとえば突然PCがブルースクリーンになってしまい、予期しないシャットダウンをしなければいけなくなったとします。そのときGitに作業履歴が残っていれば、かなり前の作業まで遡ってしまうことが少なくなります。GitはSourceTreeをダウンロードして使うのがいいでしょう。もしGitについてあまり知らない場合は、拙著のSteins;Gitを読んでみてください。</p>
 
-<h2><a id="h2-2"></a><span class="secno">2.2　</span>分からないことがあった時には？</h2>
+<h2><a id="h2-2"></a><span class="secno">2.2　</span>分からないことがあったときには？</h2>
 <p>サイトの実装をしていくうちに、分からないところが出てくる場合もあります。</p>
 <p>たとえば「固有名詞が何を示すものなのか分からない」「必要とされている機能を実現する方法が分からない」「なぜエラーになるのか分からない」が挙げられます。</p>
 <p>そういった際どのように解決するかを書きます。</p>
 
 <h3><a id="h2-2-1"></a>検索する</h3>
-<p>まずは検索します。検索した時に結果が出やすい手法はいくつかあります。</p>
+<p>まずは検索します。検索したときに結果が出やすい手法はいくつかあります。</p>
 <p>はじめに、<tt>CSSで背景色をつけるやり方</tt>と検索するより、<tt>CSS 背景色 やり方</tt>のように単語で区切るほうが検索結果の件数は増えます。検索エンジンは<tt>CSSで背景色をつけるやり方</tt>のような文章が苦手です。そのため文章よりも単語ごとに区切ったほうが検索結果の件数は増えます。</p>
 <p>また、より入門的な内容を探したい場合<tt>○○ とは</tt>で検索するのがいいです。理由は入門的な記事のタイトルが<tt>○○ とは</tt>と書く傾向にあるためです。たとえばJavaScriptの初心者向け記事を探したい場合は<tt>JavaScript とは</tt>といった感じで検索します。</p>
 <p>次に、JavaScriptでエラーメッセージが出力された場合、エラーメッセージをそのまま検索することです。エラーメッセージをそのまま検索することで、解決方法が出てきやすいです。しかしだいたい英語（そしてほとんどStack Overflowというサイト）なので、そこは頑張って内容を読み取るしかないです。</p>
@@ -96,7 +96,7 @@
 <p>ライブラリは、汎用性が高いプログラムを他のプログラムからも使えるようにひとまとまりとしたものです。たとえばCSSであればBootstrapやFoundation、JavaScriptでいえばjQueryなどがライブラリです。いまあなたが見ているこの文章も、自動的に日本語の文章をチェックする<a href="https://github.com/textlint/textlint" class="link">textlint</a>というライブラリを使い、自動校正しながら書いています。</p>
 
 <h3><a id="h2-3-2"></a>ライブラリを選ぶ基準</h3>
-<p>ライブラリについて説明したところで、自分がライブラリを選ぶ時の基準について、いくつか書きます。</p>
+<p>ライブラリについて説明したところで、自分がライブラリを選ぶときの基準について、いくつか書きます。</p>
 
 <h4><a id="h2-3-2-1"></a>利用実績</h4>
 <p>はじめに、そのライブラリが広く使われているかを見ます。広く使われていれば、ライブラリを使う上で何か困って検索をしたときに情報が出てきやすいためです。</p>
@@ -109,7 +109,7 @@
 <p>自分達でなんとかするのであればいいですが、そうでない場合は活発なライブラリを選ぶのがいいです。</p>
 
 <h4><a id="h2-3-2-3"></a>ソースコードの流れを把握しやすい</h4>
-<p>次に、ソースコードの流れを把握しやすいか見ます。何か困ったときにドキュメントを見ますが、それでも解決できない場合はソースコードを読む必要があるためです。その時にソースコードの流れを把握できなかった場合、解決方法が見つからずつらくなります。</p>
+<p>次に、ソースコードの流れを把握しやすいか見ます。何か困ったときにドキュメントを見ますが、それでも解決できない場合はソースコードを読む必要があるためです。そのときにソースコードの流れを把握できなかった場合、解決方法が見つからずつらくなります。</p>
 <p>全体把握しやすいライブラリとしてたとえば<a href="http://backbonejs.org/" class="link">Backbone.js</a>が挙げられます。<a href="https://github.com/jashkenas/backbone/blob/master/backbone.js" class="link">ソースコード</a>はまとまりの単位が小さいため流れを追いやすいです。ソースコードの行数も1,877行（2015/7/10現在）なので全体を読もうと思えば読めます。</p>
 
 <h4><a id="h2-3-2-4"></a>ドキュメントがそろっている</h4>
@@ -130,7 +130,7 @@
 <h2><a id="h2-5"></a><span class="secno">2.5　</span>ライブラリの選定JavaScript編</h2>
 <p>次にJavaScriptのライブラリを選定していきます。今回JavaScript側で実装する機能として、カルーセルがあります。</p>
 <p>カルーセルは<a href="http://www.nike.com/jp/ja_jp/" class="link">Nike</a> などで使われている「注目させたい複数の画像などをつぎつぎと横にスライド表示する」ものです。このカルーセルを実現するためのライブラリは<a href="http://kenwheeler.github.io/slick/" class="link">slick</a>にします。slickを使うために<a href="http://jquery.com/" class="link">jQuery</a>も使います。</p>
-<p>選定した理由は2つあります。ひとつめとして、ドキュメントがそろっておりカルーセルを実装する時に困らないためです。これによりやりたいことがすぐ実現できます。ふたつめとして、slickは開発が活発なことです。ただ互換性がない更新も起こるので最新版に更新する際は注意が必要です。</p>
+<p>選定した理由は2つあります。ひとつめとして、ドキュメントがそろっておりカルーセルを実装するときに困らないためです。これによりやりたいことがすぐ実現できます。ふたつめとして、slickは開発が活発なことです。ただ互換性がない更新も起こるので最新版に更新する際は注意が必要です。</p>
 <p>なお、カルーセルでの表示に無限ループがいらなければ<a href="http://hokaccha.github.io/js-flipsnap/" class="link">flipsnap.js</a>もおすすめです。jQueryに依存するライブラリでは他に<a href="http://owlgraphic.com/owlcarousel/" class="link">Owl Carousel</a>がよく使われます。</p>
 <p>これでライブラリの選定が終わりました。次章からはサイトの実装をしていきます。</p>
 
