--- a/book/ch05.html
+++ b/book/ch05.html
@@ -219,7 +219,7 @@
 
 <h2><a id="h5-7"></a><span class="secno">5.7　</span>動画部分の見た目を整える</h2>
 <p>動画部分にスタイルを適用していきます。YouTubeの動画をページ内へ埋め込んでいますが、初期状態だとウィンドウ幅を狭めた場合に動画が収まりきらない状態で表示されてしまいます。そのためCSSで動画をウィンドウ幅内へ収まるように調整します。</p>
-<p>ライブステージページへYouTubeの動画を埋め込んだ時に動画を<tt>div</tt>要素で囲みました。その<tt>div</tt>要素に指定している<tt>ll-live-video</tt>というクラスにCSSでアスペクト比を設定します。動画部分の<tt>iframe</tt>要素に対し絶対配置にする<tt>position: absolute;</tt>を指定した上で幅と高さを100％にすることにより、動画が収まって表示されます。</p>
+<p>ライブステージページへYouTubeの動画を埋め込んだときに動画を<tt>div</tt>要素で囲みました。その<tt>div</tt>要素に指定している<tt>ll-live-video</tt>というクラスにCSSでアスペクト比を設定します。動画部分の<tt>iframe</tt>要素に対し絶対配置にする<tt>position: absolute;</tt>を指定した上で幅と高さを100％にすることにより、動画が収まって表示されます。</p>
 <div class="emlist-code">
 <pre class="emlist">/* ライブステージページ：動画部分をレスポンシブにする */
 .ll-live-video {
@@ -240,7 +240,7 @@
 </div>
 
 <h2><a id="h5-8"></a><span class="secno">5.8　</span>動画の情報を表示している要素の見た目を整える</h2>
-<p>動画の情報を表示している要素に対しスタイルを適用していきます。はじめにウィンドウ幅を狭くした時、余白が上下に空くよう<tt>margin</tt>を定義します。</p>
+<p>動画の情報を表示している要素に対しスタイルを適用していきます。はじめにウィンドウ幅を狭くしたとき、余白が上下に空くよう<tt>margin</tt>を定義します。</p>
 <div class="emlist-code">
 <pre class="emlist">/* ライブステージページ：動画の情報 */
 .ll-video-detail {
@@ -283,7 +283,7 @@
 
 <h2><a id="h5-9"></a><span class="secno">5.9　</span>動画の情報部分の見た目をウィンドウ幅ごとに整える</h2>
 <p>動画の情報部分の見た目を整えたら、今度はウィンドウ幅ごとに整えていきます。特にタブ内の文字はウィンドウ幅を小さくしていくとタブからはみ出して表示されます。文字がはみ出すのを防ぐため細かく文字サイズを調整しています。</p>
-<p>他のスタイルは主にタブレットやPCで見た時、グローバルナビゲーションと同じような見た目になるようスタイル定義しています。</p>
+<p>他のスタイルは主にタブレットやPCで見たとき、グローバルナビゲーションと同じような見た目になるようスタイル定義しています。</p>
 <div class="emlist-code">
 <pre class="emlist">/* ライブステージページ：動画の情報タブの各ウィンドウ幅ごとのスタイル定義 */
 @media (min-width: 768px) {
@@ -480,18 +480,18 @@
 </pre>
 </div>
 <p>スクリーンショットは次のとおりになります。</p>
-<p>図のようにPCで見た時は横に並んで各要素が表示されています。</p>
+<p>図のようにPCで見たときは横に並んで各要素が表示されています。</p>
 <div id="livestage-pc" class="image">
-<img src="images/ch05/livestage-pc.jpg" alt="PCで見た時のラブライブ！参加者募集サイト" />
+<img src="images/ch05/livestage-pc.jpg" alt="PCで見たときのラブライブ！参加者募集サイト" />
 <p class="caption">
-図5.2: PCで見た時のラブライブ！参加者募集サイト
+図5.2: PCで見たときのラブライブ！参加者募集サイト
 </p>
 </div>
-<p>また図のようにタブレットで見た時は動画が1番目立つ位置にあります。</p>
+<p>また図のようにタブレットで見たときは動画が1番目立つ位置にあります。</p>
 <div id="livestage-tablet" class="image">
-<img src="images/ch05/livestage-tablet.jpg" alt="タブレットで見た時のラブライブ！参加者募集サイト" />
+<img src="images/ch05/livestage-tablet.jpg" alt="タブレットで見たときのラブライブ！参加者募集サイト" />
 <p class="caption">
-図5.3: タブレットで見た時のラブライブ！参加者募集サイト
+図5.3: タブレットで見たときのラブライブ！参加者募集サイト
 </p>
 </div>
 
