--- a/book/ch04.html
+++ b/book/ch04.html
@@ -223,7 +223,7 @@
 <p>はじめに定義した変数や関数が他のJavaScriptに干渉しないよう、JavaScriptのソースコード全体を無名関数で囲みます。JavaScriptは宣言した変数や関数の有効範囲（スコープ）が関数単位で閉じられるため無名関数を使います。無名関数は<tt>function() {}</tt>と書きます。ここから無名関数の全体を<tt>()</tt>で囲み最後に<tt>()</tt>を付けることでJavaScriptを即時実行します。つまり<tt>(function() {})();</tt>となります。こうすることにより無名関数内で宣言した変数や関数が他のJavaScriptへ干渉することを防げます。このように無名関数で全体を囲み即時に実行する関数のことを即時関数と呼びます。</p>
 <p>jQueryを使う場合は<tt>(function() { ... })();</tt>の前に<tt>$</tt>を書いて最後の<tt>()</tt>を削除します。つまり<tt>$(function() { ... });</tt>となります。<tt>$</tt>を書く理由はブラウザーがHTMLを読み込んで解釈した後にJavaScriptを実行させるためです。HTMLを解釈した後にJavaScriptの実行をしない場合、JavaScript内でHTMLの要素を取得できない可能性があります。また最後の<tt>()</tt>を削除した理由は、<tt>$</tt>というのはjQueryの関数だからです。<tt>$</tt>関数の引数として関数を指定するため、最後の<tt>()</tt>がいらなくなります。</p>
 <p>続いて<tt>$(function() { ... });</tt>の中には<tt>&quot;use strict&quot;;</tt>という文字列を書いています。これはJavaScriptをコーディングする上でミスしやすい部分をエラーとして検出してくれるものです。将来に備えていくつかの単語を自由に使えなくする（たとえば<tt>let</tt>や<tt>yield</tt>など）効果があるため、<tt>&quot;use strict&quot;;</tt>は書いても損はありません。</p>
-<p>ここまでをまとめると次のソースコードになります。上に書いたことはなかなか覚えづらいので、JavaScriptを書く時にjQueryを使う場合は図のようにすると覚えておけば大丈夫です。</p>
+<p>ここまでをまとめると次のソースコードになります。上に書いたことはなかなか覚えづらいので、JavaScriptを書くときにjQueryを使う場合は図のようにすると覚えておけば大丈夫です。</p>
 <div class="emlist-code">
 <pre class="emlist">$(function() {
   &quot;use strict&quot;;
@@ -272,7 +272,7 @@ Carousel.prototype.getCurrentIndex = function() {
 <li>ページネーション内の要素を示す<tt>paginationItemElements</tt></li>
 <li>アクティブなページを示す<tt>activePageName</tt></li>
 </ul>
-<p>これらのパラメーターを元に<tt>CarouselPagination</tt>関数でページネーションが使えるようにします。あとはカルーセルの表示切り替え時に<tt>activatePage</tt>関数と<tt>deactivatePage</tt>関数を呼び出してページネーションの表示を変えられるようにします。</p>
+<p>これらのパラメーターを元に<tt>CarouselPagination</tt>関数でページネーションが使えるようにします。あとはカルーセルの表示を切り替えるときに<tt>activatePage</tt>関数と<tt>deactivatePage</tt>関数を呼び出してページネーションの表示を変えられるようにします。</p>
 <div class="emlist-code">
 <pre class="emlist">function CarouselPagination(paginationElement, paginationItemElements, activePageName) {
   this.activePageName = activePageName;
