[ci skip] Update with d12d1c6

--- a/book/ch04.html
+++ b/book/ch04.html
@@ -388,6 +388,13 @@ carouselPagination.activatePage(carousel.getCurrentIndex());
 });
 </pre>
 </div>
+<p>スクリーンショットは次のとおりになります。</p>
+<div id="top" class="image">
+<img src="images/ch04/top.jpg" alt="完成したトップページ" />
+<p class="caption">
+図4.2: 完成したトップページ
+</p>
+</div>
 
 
             <ul class="pager">
