[ci skip] Update with db058be

--- a/book/index.html
+++ b/book/index.html
@@ -37,12 +37,10 @@
 <p>本書は誰も語ることがなかった「アニメ内にでてきたラブライブ参加者募集サイトの作り方を、企画と開発の両面から具体的に説明する」というコンセプトのもと執筆された本です。企画から開発までサイト制作の流れをなぞることで、実用的なスキルが身につけられることをゴールとしています。</p>
 
 <h2><a id="h-1"></a>本書の構成</h2>
-<p>大きく分けると二章に分かれています。</p>
-<p>第一章ではサイトの企画について@fruitnoodleがどのように必要な情報をまとめていくかを書いていきます。第二章ではサイトの開発について@kuboshoがどのように実装していくのかを書いていきます。</p>
-<p>なお、デザイン段階やテスト段階、またリリース後のマーケティングについては本書で取り扱いません。</p>
+<p>本書は仕様と開発という2つの観点を書いています。まず仕様を決めた上で開発の準備をして実際にサイトを実装する流れとなっています。デザイン段階やテスト段階、またリリース後のマーケティングについては本書で取り扱いません。</p>
 
 <h2><a id="h-2"></a>アニメからの画像引用について</h2>
-<p>この同人誌では、アニメからキャプチャ画像を引用している箇所があります。これに関しては著作権法第32条の1項で規定されている引用の条件に基づき、引用をおこなっています。</p>
+<p>この同人誌では、アニメをキャプチャし引用している箇所があります。これに関しては著作権法第32条の1項で規定されている引用の条件に基づき、引用をおこなっています。</p>
 
 
             <ul class="pager">
