--- a/example/index.html
+++ b/example/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
   <meta charset="UTF-8">
   <title>LoveLive! 2nd トーナメント</title>
@@ -7,14 +7,12 @@
   <meta name="keywords" content="ラブライブ,特設サイト">
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="external/Nico/bootstrap.min.css">
-  <link rel="stylesheet" href="external/slick/slick.css">
   <link rel="stylesheet" href="styles/main.css">
-  <script src="external/jquery/jquery-2.1.4.min.js" defer></script>
   <script src="external/slick/slick.min.js" defer></script>
-  <script src="scripts/main.js" defer></script>
+  <script src="external/scripts/main.js" defer></script>
 </head>
 
-<body id="ll-top-page">
+<body>
 <header id="ll-header" class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -32,7 +30,7 @@
   <nav id="ll-nav" class="navbar navbar-inverse">
     <div class="container-fluid">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html">Top</a></li>
+        <li class="active ll-active"><a href="/">Top</a></li>
         <li><a href="livestage.html">Live stage</a></li>
         <li><a href="#">Outline</a></li>
         <li><a href="#">Schedule</a></li>
@@ -45,15 +43,6 @@
 </header>
 
 <main>
-  <div class="js_slides ll-slides">
-    <img src="images/image_01.jpg" alt="">
-    <img src="images/image_02.jpg" alt="">
-  </div>
-
-  <ol class="js_slides-pagination ll-slides-pagination">
-    <li>●</li>
-    <li>●</li>
-  </ol>
 </main>
 
 <footer id="ll-footer" class="navbar navbar-default">
