write(ch04): 第4章のサンプルコードに合わせてサンプルサイトを再実装した

--- a/example/index.html
+++ b/example/index.html
@@ -7,9 +7,11 @@
   <meta name="keywords" content="ラブライブ,特設サイト">
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="external/Nico/bootstrap.min.css">
+  <link rel="stylesheet" href="external/slick/slick.css">
   <link rel="stylesheet" href="styles/main.css">
+  <script src="external/jquery/jquery-2.1.4.min.js" defer></script>
   <script src="external/slick/slick.min.js" defer></script>
-  <script src="external/scripts/main.js" defer></script>
+  <script src="scripts/main.js" defer></script>
 </head>
 
 <body>
@@ -42,7 +44,16 @@
   </nav>
 </header>
 
-<main>
+<main id="ll-top-page-contents">
+  <div class="js-slides ll-slides">
+    <img src="images/image_01.jpg" alt="ラブライブ！ 2nd グランプリ μ's">
+    <img src="images/image_02.jpg" alt="ラブライブ！ 1st グランプリ A-RISE">
+  </div>
+
+  <ol class="js-slides-pagination ll-slides-pagination">
+    <li>●</li>
+    <li>●</li>
+  </ol>
 </main>
 
 <footer id="ll-footer" class="navbar navbar-default">
